[tool.poetry]
name = "riberry"
version = "0.10.5"
description = "Python-driven job management system"
authors = ["Shady Rafehi <shadyrafehi@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/srafehi/riberry"
keywords = ["riberry", "workflow", "job", "celery", "multiprocessing"]
[tool.poetry.dependencies]
python = "^3.6"
sqlalchemy = "^1.3"
pendulum = "^2.0"
croniter = "^0.3.29"
pyyaml = "^5.1"
pyjwt = "^1.7"
toml = "^0.10.0"
click = "^7.0"
redis = "^3.2"
celery = {version="^4.3", extras=["redis"]}

[tool.poetry.dev-dependencies]
pytest = "^4.4"
pytest-cov = "^2.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
